k8s/service/.devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-deployment
  labels:
    app: healthcheck
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthcheck
  template:
    metadata:
      labels:
        app: healthcheck
    spec:
      containers:
        - name: healthcheck
          image: cmazx/health-check:v0.3
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
