k8s/service/.devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-service
spec:
  selector:
    app: healthcheck
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
