k8s/service/.devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheck-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: "/health"
            backend:
              service:
                name: healthcheck-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/otusapp/(.+)/(.*)"
            backend:
              service:
                name: healthcheck-service
                port:
                  number: 8000
